--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ body {
   transition: transform 0.3s ease;
 
   &:hover {
-    transform: translateY(-10px); // Effet de levée au survol
+    transform: translateY(-10px); 
   }
 
   .profile-img {
